Creado mediante Colaboratory

--- a/ventajas_comparativas.ipynb
+++ b/ventajas_comparativas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ventajas-comparativas.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP3Yw/HFHSLFi4Rig3nYZhf",
+      "authorship_tag": "ABX9TyPVG6xcYBO+E8nOwGnu4k8A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/martinjm81/pythonprojects/blob/main/ventajas_comparativas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/martinjm81/pythonprojects/blob/Economia/ventajas_comparativas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -291,6 +291,90 @@
             "De lo cual se concluye que: \n",
             "1) Perú tiene ventaja absoluta en cobre y \n",
             "2) Perú tiene ventaja absoluta en arroz\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eRSIEggVZ53o"
+      },
+      "source": [
+        "#Generalizando el programa:\n",
+        "def ventajas():\n",
+        "  print(\"Bienvenidos al programa de determinación de ventajas absolutas del comercio internacional\")\n",
+        "  print(\"Por favor, ingrese los siguientes datos: \")\n",
+        "  pais1 = input(\"escribe el nombre del país local: \")\n",
+        "  pais2 = input(\"Escribe el nombre del país competidor: \")\n",
+        "  producto1 = input(\"Escribe un bien que produzcan ambos países: \")\n",
+        "  producto2 = input(\"Ahora escribe otro bien que produzcan ambos países: \")\n",
+        "  pais1_producto1 = input(\"¿Cuánto cobre produce País1? \")\n",
+        "  pais2_producto1 = input(\"¿Cuánto cobre produce País2? \")\n",
+        "  pais1_producto2 = input(\"¿Cuánto arroz produce País1? \")\n",
+        "  pais2_producto2 = input(\"¿Cuánto arroz produce País2? \")\n",
+        "  import numpy as np\n",
+        "  import pandas as pd\n",
+        "\n",
+        "  matriz = np.array([[pais1_producto1, pais1_producto2],[pais1_producto1,pais1_producto2]])\n",
+        "  matriz = pd.DataFrame(matriz)\n",
+        "  matriz.columns = ['producto1', 'producto2']\n",
+        "  matriz.index = ['Pais1', 'pais2']\n",
+        "  print(\"__________________________________\")\n",
+        "  print(\"La matriz de producción es: \")\n",
+        "  print(matriz)\n",
+        "  print(\"__________________________________\")\n",
+        "  print(\"De lo cual se concluye que: \")\n",
+        "\n",
+        "  if pais1_producto1 > pais2_producto1:\n",
+        "    print(\"1) Pais1 tiene ventaja absoluta en producto1 y \")\n",
+        "  else:\n",
+        "    print(\"1) Pais2 tiene ventaja absoluta en producto2 y\")\n",
+        "  if pais1_producto2 > pais2_producto2:\n",
+        "    print(\"2) Pais1 tiene ventaja absoluta en producto1\")\n",
+        "  else:\n",
+        "    print(\"2) Pais2 tiene ventaja absoluta en producto2\")"
+      ],
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8kgsJHvRbX64",
+        "outputId": "e4497a3f-45e3-44d4-bec8-39f1a0c92cfe"
+      },
+      "source": [
+        "ventajas()\n"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Bienvenidos al programa de determinación de ventajas absolutas del comercio internacional\n",
+            "Por favor, ingrese los siguientes datos: \n",
+            "escribe el nombre del país local: chile\n",
+            "Escribe el nombre del país competidor: uruguay\n",
+            "Escribe un bien que produzcan ambos países: vino\n",
+            "Ahora escribe otro bien que produzcan ambos países: carne\n",
+            "¿Cuánto cobre produce País1? 20\n",
+            "¿Cuánto cobre produce País2? 24\n",
+            "¿Cuánto arroz produce País1? 203\n",
+            "¿Cuánto arroz produce País2? 22\n",
+            "__________________________________\n",
+            "La matriz de producción es: \n",
+            "      producto1 producto2\n",
+            "Pais1        20       203\n",
+            "pais2        20       203\n",
+            "__________________________________\n",
+            "De lo cual se concluye que: \n",
+            "1) Pais2 tiene ventaja absoluta en cobre y\n",
+            "2) Pais2 tiene ventaja absoluta en arroz\n"
           ],
           "name": "stdout"
         }
