Creado mediante Colaboratory

--- a/ventajas_comparativas.ipynb
+++ b/ventajas_comparativas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ventajas-comparativas.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPVG6xcYBO+E8nOwGnu4k8A",
+      "authorship_tag": "ABX9TyM5u2XXGATPeheBpXw8FAyz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -302,7 +302,7 @@
         "id": "eRSIEggVZ53o"
       },
       "source": [
-        "#Generalizando el programa:\n",
+        "#Generalizando el programa (intento1)\n",
         "def ventajas():\n",
         "  print(\"Bienvenidos al programa de determinación de ventajas absolutas del comercio internacional\")\n",
         "  print(\"Por favor, ingrese los siguientes datos: \")\n",
@@ -310,14 +310,14 @@
         "  pais2 = input(\"Escribe el nombre del país competidor: \")\n",
         "  producto1 = input(\"Escribe un bien que produzcan ambos países: \")\n",
         "  producto2 = input(\"Ahora escribe otro bien que produzcan ambos países: \")\n",
-        "  pais1_producto1 = input(\"¿Cuánto cobre produce País1? \")\n",
-        "  pais2_producto1 = input(\"¿Cuánto cobre produce País2? \")\n",
-        "  pais1_producto2 = input(\"¿Cuánto arroz produce País1? \")\n",
-        "  pais2_producto2 = input(\"¿Cuánto arroz produce País2? \")\n",
+        "  pais1_producto1 = input(\"¿Cuánto producto1 produce País1? \")\n",
+        "  pais2_producto1 = input(\"¿Cuánto producto1 produce País2? \")\n",
+        "  pais1_producto2 = input(\"¿Cuánto producto2 produce País1? \")\n",
+        "  pais2_producto2 = input(\"¿Cuánto producto2 produce País2? \")\n",
         "  import numpy as np\n",
         "  import pandas as pd\n",
         "\n",
-        "  matriz = np.array([[pais1_producto1, pais1_producto2],[pais1_producto1,pais1_producto2]])\n",
+        "  matriz = np.array([[pais1_producto1, pais1_producto2],[pais2_producto1,pais2_producto2]])\n",
         "  matriz = pd.DataFrame(matriz)\n",
         "  matriz.columns = ['producto1', 'producto2']\n",
         "  matriz.index = ['Pais1', 'pais2']\n",
@@ -336,7 +336,7 @@
         "  else:\n",
         "    print(\"2) Pais2 tiene ventaja absoluta en producto2\")"
       ],
-      "execution_count": 43,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -346,35 +346,153 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8kgsJHvRbX64",
-        "outputId": "e4497a3f-45e3-44d4-bec8-39f1a0c92cfe"
+        "outputId": "a6e6662c-db7c-4140-e560-d44bce9b0d22"
       },
       "source": [
         "ventajas()\n"
       ],
-      "execution_count": 44,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Bienvenidos al programa de determinación de ventajas absolutas del comercio internacional\n",
             "Por favor, ingrese los siguientes datos: \n",
-            "escribe el nombre del país local: chile\n",
-            "Escribe el nombre del país competidor: uruguay\n",
+            "escribe el nombre del país local: peru\n",
+            "Escribe el nombre del país competidor: chile\n",
             "Escribe un bien que produzcan ambos países: vino\n",
-            "Ahora escribe otro bien que produzcan ambos países: carne\n",
-            "¿Cuánto cobre produce País1? 20\n",
-            "¿Cuánto cobre produce País2? 24\n",
-            "¿Cuánto arroz produce País1? 203\n",
-            "¿Cuánto arroz produce País2? 22\n",
+            "Ahora escribe otro bien que produzcan ambos países: cobre\n",
+            "¿Cuánto producto1 produce País1? 200\n",
+            "¿Cuánto producto1 produce País2? 3030\n",
+            "¿Cuánto producto2 produce País1? 3000\n",
+            "¿Cuánto producto2 produce País2? 333\n",
             "__________________________________\n",
             "La matriz de producción es: \n",
             "      producto1 producto2\n",
-            "Pais1        20       203\n",
-            "pais2        20       203\n",
+            "Pais1       200      3000\n",
+            "pais2      3030       333\n",
             "__________________________________\n",
             "De lo cual se concluye que: \n",
-            "1) Pais2 tiene ventaja absoluta en cobre y\n",
-            "2) Pais2 tiene ventaja absoluta en arroz\n"
+            "1) Pais2 tiene ventaja absoluta en producto2 y\n",
+            "2) Pais2 tiene ventaja absoluta en producto2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AEyKYfWImwfI",
+        "outputId": "130ebe97-c467-4a70-992e-54e07d7b612d"
+      },
+      "source": [
+        "pais = {}\n",
+        "pais['pais1'] = \"chile\"\n",
+        "print(pais['pais1'])"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "chile\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aiW1heMId5q2"
+      },
+      "source": [
+        "#segundo intento de generalización\n",
+        "\n",
+        "def ventajas():\n",
+        "  print(\"Bienvenidos al programa de determinación de ventajas absolutas del comercio internacional\")\n",
+        "  print(\"Por favor, ingrese los siguientes datos: \")\n",
+        "  pais = {}\n",
+        "  pais['pais1'] = input(\"escribe el nombre del país local: \")\n",
+        "  pais['pais2'] = input(\"Escribe el nombre del país competidor: \")\n",
+        "  prod = {}\n",
+        "  prod['producto1'] = input(\"Escribe un bien que produzcan ambos países: \")\n",
+        "  prod['producto2'] = input(\"Ahora escribe otro bien que produzcan ambos países: \")\n",
+        "  q = {}\n",
+        "  pregunta1 = \"¿Cuánto \" + prod['producto1'] +  \" produce \" + pais['pais1'] + \" ? \"\n",
+        "  pregunta2 = \"¿Cuánto \" + prod['producto1'] +  \" produce \" + pais['pais2'] + \" ? \"\n",
+        "  pregunta3 = \"¿Cuánto \" + prod['producto2'] +  \" produce \" + pais['pais1'] + \" ? \"\n",
+        "  pregunta4 = \"¿Cuánto \" + prod['producto2'] +  \" produce \" + pais['pais2'] + \" ? \"\n",
+        "  q['pais1_producto1'] = input(pregunta1)\n",
+        "  q['pais2_producto1'] = input(pregunta2)\n",
+        "  q['pais1_producto2'] = input(pregunta3)\n",
+        "  q['pais2_producto2'] = input(pregunta4)\n",
+        "  \n",
+        "  import numpy as np\n",
+        "  import pandas as pd\n",
+        "\n",
+        "  matriz = np.array([[q['pais1_producto1'], q['pais1_producto2']],[q['pais2_producto1'],q['pais2_producto2']]])\n",
+        "  matriz = pd.DataFrame(matriz)\n",
+        "  matriz.columns = [prod['producto1'], prod['producto2']]\n",
+        "  matriz.index = [pais['pais1'], pais['pais2']]\n",
+        "  print(\"__________________________________\")\n",
+        "  print(\"La matriz de producción es: \")\n",
+        "  print(matriz)\n",
+        "  print(\"__________________________________\")\n",
+        "  print(\"De lo cual se concluye que: \")\n",
+        "\n",
+        "  if q['pais1_producto1'] > q['pais2_producto1']:\n",
+        "    print(\"1)\", pais['pais1'], \"tiene ventaja absoluta en\", prod['producto1'], \"y \")\n",
+        "  else:\n",
+        "    print(\"1)\", pais['pais2'], \"tiene ventaja absoluta en\", prod['producto1'], \"y \")\n",
+        "  if q['pais1_producto2'] > q['pais2_producto2']:\n",
+        "    print(\"2)\", pais['pais1'], \"tiene ventaja absoluta en\", prod['producto2'], \"y \")\n",
+        "  else:\n",
+        "    print(\"2)\", pais['pais2'], \"tiene ventaja absoluta en\", prod['producto2'], \"y \")"
+      ],
+      "execution_count": 96,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A8HKRb27h2hl",
+        "outputId": "f938de32-4c16-4abf-eb43-2c303115a732"
+      },
+      "source": [
+        "ventajas()"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Bienvenidos al programa de determinación de ventajas absolutas del comercio internacional\n",
+            "Por favor, ingrese los siguientes datos: \n",
+            "escribe el nombre del país local: mexico\n",
+            "Escribe el nombre del país competidor: nigeria\n",
+            "Escribe un bien que produzcan ambos países: vino\n",
+            "Ahora escribe otro bien que produzcan ambos países: autos\n",
+            "¿Cuánto vino produce mexico ? 1000\n",
+            "¿Cuánto vino produce nigeria ? 20000\n",
+            "¿Cuánto autos produce mexico ? 24400\n",
+            "¿Cuánto autos produce nigeria ? 2000\n",
+            "__________________________________\n",
+            "La matriz de producción es: \n",
+            "          vino  autos\n",
+            "mexico    1000  24400\n",
+            "nigeria  20000   2000\n",
+            "__________________________________\n",
+            "De lo cual se concluye que: \n",
+            "1) nigeria tiene ventaja absoluta en vino y \n",
+            "2) mexico tiene ventaja absoluta en autos y \n"
           ],
           "name": "stdout"
         }
