--- a/martin(2025)_tabla_freq1.ipynb
+++ b/martin(2025)_tabla_freq1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMAY7RMa3q8qZFiThRcCFVh",
+      "authorship_tag": "ABX9TyN/WfLL6qtd+izWytIZ40Fv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,8 +59,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#caso sin filtrar\n",
-        "df = pd.read_csv(filename)\n",
+        "#verificación\n",
+        "df = pd.read_csv(filename) #caso csv\n",
+        "#df = pd.read_excel(filename)  #caso excel\n",
+        "#df = pd.read_excel(filename, sheet_name=hoja)  #caso excel eligiendo hoja\n",
         "datos = df.dropna()\n",
         "display(datos)"
       ],
